src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error2.min_tait.stderr
error: could not find defining uses
  --> $DIR/type-alias-impl-trait-with-cycle-error2.rs:9:12
   |
LL | type Foo = impl Bar<Foo, Item = Foo>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

